# demat-folio-api

./: README.md  manage.py  pyproject.toml  vercel.json
demat_folio/: asgi.py  settings.py  urls.py  wsgi.py
docs/: api.http  research.http
portal/: models.py  services.py  urls.py  utils.py  validators.py  views.py
portal/migrations/: 0001_initial.py  0002_thirdpartytoken.py  0003_delete_thirdpartytoken.py
